# torchsqlite

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/torchsqlite/: __init__.py  dataset.py
tests/: conftest.py  test_dataset.py
